# DEZ-module03-homework

./: .dockerignore  .gitignore  DLT_upload_to_GCP.ipynb  README.md  load_yellow_taxi_data.py  main.py  pyproject.toml
